[metadata]
name = tiwo_notebooks
version = 0.0.1
author = Thomas Wissen
author_email = tiwocode@gmail.com
description = Helpers for my IPython notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tiwo/tiwo_notebooks
project_urls =
    Bug Tracker = https://github.com/tiwo/tiwo_notebooks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Jupyter

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src